Fixed whotlf center alignment

--- a/src/components/who/whotlf.css
+++ b/src/components/who/whotlf.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: calc(100vh - 102px);
   min-height: 700px;
   position: relative;
 }
